# map-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: langchain_agent.py
examples/sample_app/: index.html
hook/: map-mcp-hook.js  snippet.md
src/map_mcp/: __init__.py  bridge.py  cli.py  coreops.py  protocol.py  server.py
tests/: conftest.py  test_cli.py  test_coreops.py  test_protocol.py  test_scenario.py  test_security.py  test_server.py
