[project]
name = "map-mcp"
version = "0.1.0"
description = "Drive and perceive an existing live MapLibre GL map from an AI agent (MCP) or a human CLI — no test code, no browser automation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Kedar Dabhadkar" }]
keywords = ["maplibre", "map", "mcp", "model-context-protocol", "agent", "llm", "geospatial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3,<4",
    "websockets>=12",
]

[project.urls]
Homepage = "https://github.com/dkedar7/map-mcp"
Source = "https://github.com/dkedar7/map-mcp"
"Bug Tracker" = "https://github.com/dkedar7/map-mcp/issues"

[project.scripts]
map-mcp = "map_mcp.cli:_cli"

[project.optional-dependencies]
dev = ["pytest>=7"]
# extras for examples/langchain_agent.py (a real agent driving a live map)
demo = ["langchain-openai>=0.2", "langgraph>=0.2", "playwright>=1.40"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/map_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
